# tvims

./: .gitignore  README.md  pyproject.toml
data/Footystats/Austria-Bundesliga/: austria-bundesliga-matches-2020-to-2021-stats.csv  austria-bundesliga-matches-2021-to-2022-stats.csv  austria-bundesliga-matches-2023-to-2024-stats.csv  austria-bundesliga-matches-2024-to-2025-stats.csv
data/Footystats/Belgium-Jupiler Pro/: belgium-pro-league-matches-2020-to-2021-stats.csv  belgium-pro-league-matches-2021-to-2022-stats.csv  belgium-pro-league-matches-2024-to-2025-stats.csv  desktop.ini
data/Footystats/England-Championship/: desktop.ini  england-championship-matches-2020-to-2021-stats.csv  england-championship-matches-2022-to-2023-stats.csv  england-championship-matches-2023-to-2024-stats.csv  england-championship-matches-2024-to-2025-stats.csv
data/Footystats/England-Premier League/: desktop.ini  england-premier-league-matches-2024-to-2025-stats.csv
data/Footystats/France-Ligue 1/: france-ligue-1-matches-2024-to-2025-stats.csv
data/Footystats/Germany - Bundesliga/: desktop.ini  germany-bundesliga-matches-2024-to-2025-stats.csv
data/Footystats/Germany - Bundesliga 2/: germany-2-bundesliga-matches-2022-to-2023-stats.csv  germany-2-bundesliga-matches-2023-to-2024-stats.csv  germany-2-bundesliga-matches-2024-to-2025-stats.csv
data/Footystats/Greece - Super League/: desktop.ini  greece-super-league-matches-2020-to-2021-stats.csv  greece-super-league-matches-2024-to-2025-stats.csv
seminars/: Sem2.ipynb  Sem3.ipynb  Sem4.ipynb  Sem5.ipynb
(+13 files in other folders)
