[tool.poetry]
name = "tvims"
version = "0.1.0"
description = ""
authors = ["Alexander Pak <adpakw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ipykernel = "^6.30.1"
scipy = "^1.16.2"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
